--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -37,7 +37,7 @@
 
 /*
 	Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.9 - Stand 27.11.2021
+  Template: PenginUI - v0.99.9 - Stand 09.06.2022
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -148,6 +148,10 @@ div.home_ctn.community_recommendations_by_steam_labs_ctn { display: none !import
 div.discovery_queue_ctn.home_ctn { display: none !important; }
 div.home_index_banner.home_page_content { display: none !important; }
 div#news div.newshr, div.newsPostBlock.eurogamer, div.newsPostBlock.rps, div.newsPostBlock.pcgamer, div.newsPostBlock.kotaku { display: none !important; }
+a#SharePopupLink_Facebook.btn_grey_black.btn_medium { display: none !important; }
+div.miniprofile_nameplatecontainer {background: radial-gradient( ellipse farthest-corner at 20% 30%, rgb( 76, 80, 91 ) 0%, rgb( 52, 55, 63 ) 50%, rgb( 40, 44, 50 ) 100% ) !important;}
+video.miniprofile_nameplate {display:none !important;}
+div.profile_avatar_frame, div.playersection_avatar_frame {display:none !important;}
 
 /* Produktseiten */
 div.referring_curator_ctn, div.store_capsule_frame.curator_spotlight.no_bg, div.steam_curators_block.block.responsive_apppage_reviewblock, div.steam_curators_ctn.home_ctn { display: none !important; }
@@ -169,7 +173,12 @@ div.block.responsive_apppage_reviewblock { display: none !important; }
 div.block.responsive_apppage_details_right.heading, p.reason.for, div.similar_recent_apps_container, hr { display:none !important; }
 div.contenthub_featured_item_spotlight { display:none !important; }
 div.game_area_already_owned.page_content { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
-
+div.broadcast_embed_top_ctn_trgt { display:none !important; }
+div.SaleCustomCSS.partnersaledisplay_SaleBackground_dmyDb.SaleBackground { background-image:none !important; background-color: #1b2838 !important; }
+div#SaleSection_23110.SaleSectionCtn.broadcast.expanded, div#SaleSection_92333.SaleSectionCtn.text_section.expanded { display:none !important; }
+div.partnersaledisplay_SaleOuterContainer_3FwA4.undefined.SaleOuterContainer {margin-top:80px !important;}
+div#nextInDiscoveryQueue.next_in_queue_area { display:none !important; }
+div.broadcast_embeddable_bordered_container_3cQe7.broadcast_brd_ctn_trgt { display:none !important; }
 /* Graphen */
 div#review_histograms_container { box-shadow:none !important; }
 div#review_histograms_container.has_data { background-color:transparent !important; }
